feat:add html element

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,88 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tech book club</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  Join the ultimate tech book club
+    <title>Frontend Mentor | Tech book club</title>
+  </head>
+  <body>
+    <section>
+      <h1>Join the ultimate tech book club</h1>
 
-  Turn your reading time into learning time with fellow tech enthusiasts. 
-  Get curated recommendations, join vibrant discussions, and level up your 
-  skills one chapter at a time.
+      <p>
+        Turn your reading time into learning time with fellow tech enthusiasts.
+        Get curated recommendations, join vibrant discussions, and level up your
+        skills one chapter at a time.
+      </p>
 
-  Review membership options
-  200+ developers joined already
-
-  Read together, grow together
-
-  Monthly curated tech reads selected by industry experts
-  Virtual and in-person meetups for deep-dive discussions
-  Early access to new tech book releases
-  Author Q&A sessions with tech thought leaders
-
-  Not your average book club
-
-  Connect with a community that speaks your language - from Python to TypeScript and 
-  everything in between. Our discussions blend technical depth with practical applications.
-
-  Your tech reading journey
-
-  1
-  Choose your membership tier
-
-  2
-  Get your monthly book selection
-
-  3
-  Join our discussion forums
-
-  4
-  Attend exclusive meetups
-
-  Membership options
-
-  Starter
-  $19/month
-
-  1 book/month
-  Online forums
-
-  Subscribe now
-
-  Pro
-  $29/month
-
-  2 books/month
-  Virtual meetups
-
-  Subscribe now
-
-  Enterprise
-  Custom
-
-  Team access
-  Private sessions
-
-  Talk to us
-
-  "This book club transformed my technical reading from a solitary 
-  activity into an enriching community experience. The discussions 
-  are gold!"
-
-  Sarah Chen, Software Architect
-
-  Ready to debug your reading list?
-
-  Review membership options
-  200+ developers joined already
-
-  © 2024 - Tech Book Club
-
-</body>
+      <button>Review membership options</button>
+      <div>
+        <p>200+ developers joined already</p>
+      </div>
+    </section>
+    <section>
+      <h2>Read together, grow together</h2>
+      <ul>
+        <li>Monthly curated tech reads selected by industry experts</li>
+        <li>Virtual and in-person meetups for deep-dive discussions</li>
+        <li>Early access to new tech book releases</li>
+        <li>Author Q&A sessions with tech thought leaders</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Not your average book club</h2>
+      <p>
+        Connect with a community that speaks your language - from Python to
+        TypeScript and everything in between. Our discussions blend technical
+        depth with practical applications.
+      </p>
+    </section>
+    <section>
+      <h2>Your tech reading journey</h2>
+      <div>
+        <p>1</p>
+        <p>Choose your membership tier</p>
+      </div>
+      <div>
+        <p>2</p>
+        <p>Get your monthly book selection</p>
+      </div>
+      <div>
+        <p>3</p>
+        <p>Join our discussion forums</p>
+      </div>
+      <div>
+        <p>4</p>
+        <p>Attend exclusive meetups</p>
+      </div>
+    </section>
+    <section>
+      <h2>Membership options</h2>
+      <div>
+        <div>
+          <p>Starter</p>
+          <p>$19/month</p>
+          <p>1 book/month</p>
+          <p>Online forums</p>
+          <button>Subscribe now</button>
+        </div>
+        <div>
+          <p>Pro</p>
+          <p>$29/month</p>
+          <p>2 book/month</p>
+          <p>Virtual meetups</p>
+          <button>Subscribe now</button>
+        </div>
+        <div>
+          <p>Enterprise</p>
+          <p>Custom</p>
+          <p>Team access</p>
+          <p>Private sessionss</p>
+          <button>Talk to us</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>
+        "This book club transformed my technical reading from a solitary
+        activity into an enriching community experience. The discussions are
+        gold!"
+      </h2>
+      <p>Sarah Chen, Software Architect</p>
+    </section>
+    <footer>
+      <h2>Ready to debug your reading list?</h2>
+      <div>
+        <button>Review membership options</button>
+        <div>200+ developers joined already</div>
+      </div>
+      <div>© 2024 - Tech Book Club</div>
+    </footer>
+  </body>
 </html>
